# deepface

./: .gitignore  2022-11-28 14-54-51.mkv  app.py  clustering.py  compose.yml  data.csv  demo.py  detection_workflow.md  dynamic_chart.py  face_detection.py  face_detection_mesa.py  face_recognization.py  faces.csv  find_camera.py  mask_face.py  new_data.csv  persons.csv  pyproject.toml  readme.md  requirements.txt  table.csv  table.json  test.py
.quokka/: examples.json  state.json
bachdang/: face_detection.py
camera_web/: .env  new_data.csv
camera_web/imagelive/: apps.py  models.py  urls.py  views.py
camera_web/imagelive/management/commands/: camera_recognize_background.py
camera_web/imagelive/migrations/: 0001_initial.py
camera_web/images/: apps.py  urls.py  views.py
camera_web/templates/: home.html  video.html
camera_web/web/: settings.py  urls.py
client/: .eslintrc.json  next.config.js  package-lock.json  package.json
client/src/app/: page.tsx
custom_deepface/face_detection/: __init__.py
custom_deepface/face_detection/build_model/: __init__.py
custom_deepface/face_detection/load_weights/: __init__.py
custom_deepface/face_embedding/: __init__.py
database/cropped/: representations_arcface.pkl
templates/: index.html
