[tool.poetry]
name = "deepface"
version = "0.1.0"
description = ""
authors = ["Lê Công Minh Khôi <lcngmnhkhoi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pip = "^23.2.1"
pandas = "^2.0.3"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
gdown = "^4.7.1"
seaborn = "^0.12.2"
black = "^23.7.0"
flask = "^2.3.3"
jinja2 = "^3.1.2"
flask-socketio = "^5.3.5"
opencv-python = "^4.8.0.76"
simple-websocket = "^0.10.1"
loguru = "^0.7.1"
uuid = "^1.30"
mysqlclient = "^2.2.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
